--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sweetalert2": "^11.10.3"
+    "sweetalert2": "^11.10.3",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
