--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
